# owasp-agentic-scanner

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  scanner.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  pypi.yml  security.yml  test.yml  type-check.yml
docs/: ARCHITECTURE.md  EXTENDING.md  PRE_COMMIT.md  RULES.md
reporters/: __init__.py  console.py  json_reporter.py
rules/: __init__.py  base.py  code_execution.py  excessive_agency.py  goal_hijack.py  insecure_plugin.py  memory_poisoning.py  model_theft.py  overreliance.py  privilege_abuse.py  supply_chain.py  tool_misuse.py
src/owasp_agentic_scanner/: __init__.py  cli.py
src/owasp_agentic_scanner/reporters/: __init__.py  console.py  json_reporter.py  sarif_reporter.py
src/owasp_agentic_scanner/rules/: __init__.py  base.py  code_execution.py  excessive_agency.py  goal_hijack.py  insecure_plugin.py  memory_poisoning.py  model_theft.py  overreliance.py  privilege_abuse.py  supply_chain.py  tool_misuse.py
tests/: __init__.py
tests/unit/: test_base.py  test_cli.py  test_reporters.py  test_rules.py
