[project]
name = "owasp-agentic-scanner"
version = "0.1.0"
description = "Static analysis scanner for OWASP Top 10 Agentic AI risks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
owasp-scan = "scanner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rules", "reporters"]
include = ["scanner.py"]

